TabsHeader: Fix wrong aligned tabs in finished propsoals list. (#3245)

--- a/app/components/views/HomePage/HomePage.module.css
+++ b/app/components/views/HomePage/HomePage.module.css
@@ -104,8 +104,10 @@
 .tabsContent {
   width: 100%;
 }
-.tabsWrapper {
-  height: 250px;
+
+.tabs {
+  top: -55px;
+  right: 50px;
 }
 
 @media screen and (max-width: 1179px) {
